--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.springapp</groupId>
+    <groupId>ca.etsmtl.gti710</groupId>
     <artifactId>hulk</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -9,6 +9,7 @@
 
     <properties>
         <spring.version>4.1.0.RELEASE</spring.version>
+        <jackson.version>2.0.4</jackson.version>
     </properties>
 
     <dependencies>
@@ -49,6 +50,20 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
+        
+		<!-- Jackson JSON Mapper -->
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>${jackson.version}</version>
+		</dependency>
 
         <dependency>
             <groupId>junit</groupId>
