--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     
         <dependency>
             <groupId>junit</groupId>
