amazon-api AdvertisingController.java amazonApi.properties

--- a/src/main/resources/amazonApi.properties
+++ b/src/main/resources/amazonApi.properties
@@ -1,8 +1,8 @@
 #Your AWS Access Key ID, as taken from the AWS Your Account page.
-AWS_ACCESS_KEY_ID = AKIAILRWM4275XJBHDFQ
+aws_access_key_id=AKIAILRWM4275XJBHDFQ
 
 #Your AWS Secret Key corresponding to the above ID, as taken from the AWS Your Account page.
-AWS_SECRET_KEY = 5NnKyCmU1QidSwQ5t9c/Wduoe4jg9ldFnjiq0Tof
+aws_secret_key=5NnKyCmU1QidSwQ5t9c/Wduoe4jg9ldFnjiq0Tof
 
 #  Use one of the following end-points, according to the region you are
 #  interested in:
@@ -13,9 +13,8 @@ AWS_SECRET_KEY = 5NnKyCmU1QidSwQ5t9c/Wduoe4jg9ldFnjiq0Tof
 #       DE: ecs.amazonaws.de
 #       FR: ecs.amazonaws.fr
 #       JP: ecs.amazonaws.jp
-ENDPOINT = ecs.amazonaws.ca
-
+endpoint=ecs.amazonaws.ca
 
 #Associate tag
-ASSOCIATE_TAG = pho0c88-20
+associate_tag=pho0c88-20
 
